--- a/server/package.json
+++ b/server/package.json
@@ -22,9 +22,11 @@
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "pg": "^8.13.0",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.37.3"
+    "sequelize": "^6.37.3",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "eslint": "^9.11.1",
