--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,2 @@
-VITE_API='http://localhost:3000/api/'
-VITE_IMG='http://localhost:3000'
+VITE_API='http://87.228.27.131:80/api/'
+VITE_IMG='http://87.228.27.131:80'
