--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@ant-design/icons": "^5.5.1",
     "@hookform/resolvers": "^3.9.0",
     "@reduxjs/toolkit": "^2.2.7",
+    "animation.css": "^0.1.0",
     "antd": "^5.21.1",
     "antd-style": "^3.7.0",
     "axios": "^1.7.7",
